add AGPL-3.0-or-later license

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "keywords": [],
   "author": "Paul Lee",
   "version": "0.1.0",
-  "license": "MIT",
+  "license": "AGPL-3.0-or-later",
   "type": "module",
   "main": "src/server.js",
   "packageManager": "pnpm@9.4.0",
