--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "keywords": [],
   "author": "Paul Lee",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "AGPL-3.0-or-later",
   "type": "module",
   "private": true,
   "packageManager": "pnpm@9.4.0",
