--- a/backend/package.json
+++ b/backend/package.json
@@ -25,13 +25,14 @@
     "database:migrate:apply": "tsx ./scripts/run-env.ts -- prisma migrate deploy"
   },
   "dependencies": {
-    "@fastify/type-provider-typebox": "^4.0.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^1.8.3",
     "@prisma/client": "5.16.2",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
-    "lucia": "^3.2.0"
+    "fastify-type-provider-zod": "^2.0.0",
+    "lucia": "^3.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.5.0",
