--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,8 @@
     "watch": "tsx ./scripts/run-env.ts -- tsx watch ./src/server.ts",
     "build": "swc ./src -d dist",
     "clean": "tree ./dist -L 1 | head && rm -rfI ./dist",
-    "typecheck": "tsc --noEmit || true",
-    "lint": "eslint . || true",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint .",
     "format": "prettier . --write",
     "test:integration": "tsx ./scripts/test-integration.ts",
     "database:migrate:new": "tsx ./scripts/run-env.ts -- prisma migrate dev",
