attempt to migrate to drizzle orm

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 NODE_ENV="production"
-DATABASE_URL="file:./db.sqlite3"
+DATABASE_URL="./db.sqlite3"
+DATABASE_MIGRATION_FOLDER="<path to migration folder>"
