--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,13 @@
   "main": "src/server.js",
   "packageManager": "pnpm@9.4.0",
   "prettier": "@repo/config-prettier",
-  "prisma": {
-    "schema": "database/schema.prisma"
-  },
   "scripts": {
     "setup": "tsx ./scripts/project-setup.ts",
     "watch": "tsx ./scripts/run-env.ts -- tsx watch ./src/server.ts",
     "build": "swc ./src -d dist",
-    "clean": "tree ./dist -L 1 | head && rm -rfI ./dist",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
+    "formatcheck": "prettier . --check",
     "format": "prettier . --write",
     "test:integration": "tsx ./scripts/test-integration.ts",
     "database:migrate:new": "tsx ./scripts/run-env.ts -- prisma migrate dev",
@@ -26,13 +23,13 @@
   },
   "dependencies": {
     "@fastify/auth": "^4.6.1",
-    "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^1.8.3",
-    "@prisma/client": "5.16.2",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^2.0.0",
+    "@repo/data": "workspace:*",
     "lucia": "^3.2.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -46,7 +43,6 @@
     "eslint": "~9.6.0",
     "pino-pretty": "^11.2.1",
     "prettier": "3.3.2",
-    "prisma": "^5.16.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
     "vitest": "^2.0.1",
