--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@repo/config-typescript/node.json",
   "compilerOptions": {
+    "noEmit": true,
     "outDir": "./dist/src"
   },
-  "include": ["src", "drizzle.config.ts"]
+  "include": ["src"]
 }
