clean up project and fix project setup script

--- a/turbo.json
+++ b/turbo.json
@@ -40,7 +40,8 @@
     "test:integration": {
       "passThroughEnv": [
         "FORCE_LOG"
-      ]
+      ],
+      "cache": false
     },
     "test": {
       "dependsOn": [
