--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,7 @@
       ],
       "cache": false
     },
-    "watch": {
+    "start": {
       "cache": false,
       "persistent": true
     },
@@ -37,16 +37,11 @@
       ],
       "cache": false
     },
-    "test:integration": {
+    "test": {
       "passThroughEnv": [
         "FORCE_LOG"
       ],
       "cache": false
-    },
-    "test": {
-      "dependsOn": [
-        "test:integration"
-      ]
     }
   }
 }
