--- a/packages/db/.env
+++ b/packages/db/.env
@@ -1,3 +1,3 @@
 # Yes, this file is supposed to be committed to the repository
-# It allows us to run "pnpm exec prisma ..." without dotenvx etc.
+# It allows us to run "bunx prisma ..." without dotenvx etc.
 DATABASE_URL="file:../db.sqlite3"
