--- a/package.json
+++ b/package.json
@@ -6,28 +6,19 @@
   "license": "AGPL-3.0-or-later",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.4.0",
-  "prettier": "@repo/config-prettier",
-  "pnpm": {
-    "peerDependencyRules": {
-      "ignoreMissing": [
-        "@babel/*",
-        "expo-modules-*"
-      ]
-    }
-  },
+  "packageManager": "bun@1.1.20",
+  "workspaces": [
+    "apps/*",
+    "packages/*",
+    "configs/*"
+  ],
   "scripts": {
-    "setup": "zx ./scripts/project-setup.mjs"
+    "setup": "bun run ./scripts/project-setup.ts"
   },
   "devDependencies": {
-    "@repo/config-eslint": "workspace:*",
-    "@repo/config-prettier": "workspace:*",
-    "@repo/config-typescript": "workspace:*",
-    "@types/node": "^20.14.10",
+    "@types/bun": "^1.1.6",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "tsx": "^4.16.2",
-    "turbo": "^2.0.6",
-    "zx": "^8.1.4"
+    "turbo": "^2.0.6"
   }
 }
