--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,17 +3,18 @@
   "type": "module",
   "private": true,
   "prettier": "@repo/config-prettier",
-  "scripts": {
-    "typecheck": "tsc --noEmit",
-    "lint": "eslint .",
-    "formatcheck": "prettier . --check",
-    "format": "prettier . --write"
-  },
   "exports": {
     ".": "./src/index.ts"
   },
   "prisma": {
     "schema": "src/schema.prisma"
+  },
+  "scripts": {
+    "build": "prisma generate",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint .",
+    "formatcheck": "prettier . --check",
+    "format": "prettier . --write"
   },
   "devDependencies": {
     "@repo/config-eslint": "workspace:*",
