--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mutiny-mobile",
+  "name": "@repo/mobile",
   "main": "expo-router/entry",
   "version": "0.1.0",
   "prettier": "@repo/config-prettier",
@@ -8,15 +8,17 @@
   },
   "scripts": {
     "start": "expo start",
-    "test": "jest --watchAll",
+    "test_disabled": "jest --watchAll",
     "typecheck": "tsc --noEmit",
     "lint": "expo lint",
     "formatcheck": "prettier --check .",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@repo/schema": "workspace:*",
     "expo": "~51.0.20",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.8",
@@ -34,20 +36,21 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "@repo/schema": "workspace:*",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@repo/config-prettier": "workspace:*",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "prettier": "3.3.2",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3",
-    "@repo/config-prettier": "workspace:*",
-    "prettier": "3.3.2"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
