integrate @repo/hook into mutiny-mobile package

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "@repo/config-typescript",
   "compilerOptions": {
-    "strict": true,
+    // "moduleResolution": "Node",
     "paths": {
       "@/*": ["./src/*"]
     }
