--- a/configs/eslint/package.json
+++ b/configs/eslint/package.json
@@ -5,14 +5,18 @@
   "exports": {
     ".": "./base.js",
     "./node": "./node.js",
-    "./react": "./react.js"
+    "./react": "./react.js",
+    "./expo": "./expo.js"
   },
   "devDependencies": {
-    "@eslint/js": "^9.6.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.7.0",
     "@tanstack/eslint-plugin-query": "^5.51.12",
+    "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.8.0",
-    "typescript-eslint": "^7.16.0"
+    "typescript-eslint": "^7.16.1"
   }
 }
