--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@repo/mobile",
+  "type": "module",
   "main": "expo-router/entry",
-  "version": "0.1.0",
   "prettier": "@repo/config-prettier",
   "jest": {
     "preset": "jest-expo"
@@ -10,20 +10,22 @@
     "start": "expo start",
     "test_disabled": "jest --watchAll",
     "typecheck": "tsc --noEmit",
-    "lint": "expo lint",
+    "lint": "eslint .",
     "formatcheck": "prettier --check .",
     "format": "prettier --write ."
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.18",
+    "@repo/hook": "workspace:*",
     "@repo/schema": "workspace:*",
-    "expo": "~51.0.20",
+    "expo": "~51.0.21",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.8",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -33,24 +35,24 @@
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.12",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.9",
+    "@repo/config-typescript": "workspace:*",
     "@repo/config-prettier": "workspace:*",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "^7.0.0",
-    "jest": "^29.2.1",
+    "@types/react": "~18.2.79",
+    "@types/react-test-renderer": "^18.2.0",
+    "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
-    "prettier": "3.3.2",
+    "prettier": "3.3.3",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "eslint": "~9.7.0"
   },
   "private": true
 }
