--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -21,11 +21,13 @@
     "@repo/config-eslint": "workspace:*",
     "@repo/config-prettier": "workspace:*",
     "@repo/config-typescript": "workspace:*",
-    "prisma": "^5.16.2",
+    "prisma": "^5.17.0",
     "typescript": "^5.5.3",
-    "zx": "^8.1.4"
+    "zx": "^8.1.4",
+    "eslint": "~9.7.0",
+    "prettier": "3.3.3"
   },
   "dependencies": {
-    "@prisma/client": "5.16.2"
+    "@prisma/client": "5.17.0"
   }
 }
