--- a/packages/hook/package.json
+++ b/packages/hook/package.json
@@ -12,7 +12,7 @@
   },
   "exports": {
     "./provider": {
-      "types": "./src/provider.ts",
+      "types": "./src/provider.tsx",
       "default": "./dist/src/provider.js"
     },
     "./query": {
@@ -22,9 +22,7 @@
   },
   "dependencies": {
     "@repo/client": "workspace:*",
-    "@tanstack/react-query": "^5.51.11",
-    "@types/react": "^18.3.3",
-    "react": "^18.3.1"
+    "@tanstack/react-query": "^5.51.11"
   },
   "devDependencies": {
     "@repo/schema": "workspace:*",
@@ -32,8 +30,15 @@
     "@repo/config-prettier": "workspace:*",
     "@repo/config-typescript": "workspace:*",
     "@swc/cli": "^0.4.0",
-    "@swc/core": "1.6.13",
+    "@swc/core": "1.7.0",
     "@tanstack/eslint-plugin-query": "^5.51.12",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "eslint": "~9.7.0",
+    "prettier": "3.3.3",
+    "react": "18.2.0",
+    "@types/react": "^18.2.0"
+  },
+  "peerDependencies": {
+    "react": "18.2.0"
   }
 }
