--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -24,7 +24,9 @@
     "@repo/config-prettier": "workspace:*",
     "@repo/config-typescript": "workspace:*",
     "@swc/cli": "^0.4.0",
-    "@swc/core": "1.6.13",
-    "typescript": "^5.5.3"
+    "@swc/core": "1.7.0",
+    "typescript": "^5.5.3",
+    "eslint": "~9.7.0",
+    "prettier": "3.3.3"
   }
 }
