fix eslint react hooks plugin

--- a/configs/eslint/package.json
+++ b/configs/eslint/package.json
@@ -9,6 +9,7 @@
     "./expo": "./expo.js"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.7.0",
     "@tanstack/eslint-plugin-query": "^5.51.12",
