--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.9.0",
     "@react-navigation/native": "^6.1.18",
     "@repo/hook": "workspace:*",
     "@repo/schema": "workspace:*",
+    "@repo/error": "workspace:*",
     "expo": "~51.0.21",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
