add profile endpoints/tests to backend, client, and hook packages

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "@repo/config-typescript",
+  "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
   "include": [
     "src",
     "tests",
