--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -19,10 +19,11 @@
     "@expo/vector-icons": "^14.0.2",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.9.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.1.18",
+    "@repo/error": "workspace:*",
     "@repo/hook": "workspace:*",
     "@repo/schema": "workspace:*",
-    "@repo/error": "workspace:*",
     "expo": "~51.0.21",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
