--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -35,12 +35,13 @@
     "@node-rs/argon2": "^1.8.3"
   },
   "devDependencies": {
-    "@types/bun": "^1.1.6",
     "@dotenvx/dotenvx": "^1.6.4",
     "@repo/config-eslint": "workspace:*",
     "@repo/config-prettier": "workspace:*",
     "@repo/config-typescript": "workspace:*",
+    "@types/bun": "^1.1.6",
     "eslint": "~9.7.0",
+    "light-my-request": "^5.13.0",
     "pino-pretty": "^11.2.1",
     "prettier": "3.3.3",
     "typescript": "^5.5.3",
